--- a/styles/profile.css
+++ b/styles/profile.css
@@ -87,7 +87,8 @@ main > .profile_buttons {
     align-items: center;
 }
 .view_stories {
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     padding: 0 11px;
 }
 
@@ -121,8 +122,8 @@ main > .profile_buttons {
 }
 
 .content > .post {
-    width: 124px;
-    height: 124px;
+    width: 123px;
+    height: 123px;
     flex-shrink: 0;
     flex-grow: 0;
     background-color: #f5f5f5;
